<?xml version="1.0"?>
<package format="2">
  <name>liosam_2gridmap</name>
  <version>0.0.0</version>
  <description>The liosam_2gridmap package</description>

  <maintainer email="j@todo.todo">j</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
